[tool.poetry]
name = "hgraph"
version = "0.4.23"
description = """ \
A functional reactive platform used to process time-series streams. \
Provides support for backtest (simulation) and realtime time-series processing. \
Using a forward propagation graph with a microtask scheduler for the runtime engine. \
"""
readme = "README.md"
license = "MIT"
authors = [
    "Howard Henson <howard@henson.me.uk>",
    "Alexander Balabin <balabin@me.com>",
    "Simon Young <whepstead@gmail.com>",
    "Tope Olukemi <tolukemi@gmail.com>"
]
keywords = [
    "reactive", "graph", "fpg", "forward propogating graph",
    "time series", "functional reactive programming",
    "frp", "functional", "time-series"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "hgraph", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11"
frozendict = ">=2.3.10"
sortedcontainers = ">=2.4.0"
ordered-set = ">=4.1.0"
numpy = ">=1.23"
polars = ">=1.0"
sqlalchemy = "*"
duckdb = "*"
pyarrow = ">=16.1.0"
multimethod = "*"
psutil = "*"
tornado = { version = "*", optional = true }
typing-extensions = "*"
perspective-python = { version = "<4.0.0", optional = true }
pandas = { version = "*", optional = true }
requests = { version = "*", optional = true }
sphinx = { version = ">=7.4", optional = true }
sphinx_rtd_theme = { version = ">=2.0.0", optional = true }
sphinx-autodoc-typehints = { version = ">=2.3.0", optional = true }
sphinxcontrib-plantuml = { version = ">=0.30", optional = true }
sphinxcontrib-bibtex = { version = "*", optional = true }
pybtex-apa-style = { version = "*", optional = true }
matplotlib = { version = "*", optional = true }
pycurl = "*"


[tool.poetry.extras]
web = [
    "perspective-python",
    "tornado",
    "requests",
    "pandas",
    "pycurl"
]
notebook = [
    "matplotlib",
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-plantuml = "*"
sphinxcontrib-bibtex  ="*"
pybtex-apa-style = ">=1.3"

[tool.poetry.urls]
Homepage = "https://github.com/hhenson/hgraph"
Documentation = "https://github.com/hhenson/hgraph/blob/main/docs/index.md"
Repository = "https://github.com/hhenson/hgraph.git"
Issues = "https://github.com/hhenson/hgraph/blob/main/ISSUES.md"
Changelog = "https://github.com/hhenson/hgraph/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "*"
mypy = "*"
pytest-cov = "*"
coverage = "*"
pytest-xdist = "*"


# Configure pytest
[tool.pytest.ini_options]
minversion = "7.4.3"
# After 4 cores there are no measurable improvements I can measure at the moment.
addopts = "-n 4 -ra -q --dist=loadscope" # " --cov=hgraph --cov-report=term-missing --cov-report=xml"
pythonpath = ["."]
testpaths = [
    "hgraph_unit_tests",
]
markers = [
    "serial: mark test to run serially (not in parallel with xdist)",
]

# Configure coverage
[tool.coverage.run]
source_pkgs = ["hgraph", ]
branch = true
parallel = true
omit = [
    "hgraph_unit_tests/*",
    "examples/*",
    "docs/*",
    "src/hgraph/notebook/*",
    "src/hgraph/debug/*"
]

[tool.coverage.paths]
hg = ["src/hgraph", ]
tests = ["hgraph_unit_tests"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py311']
unstable = true
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.mypy]
files = ["src", ]

[tool.poetry.scripts]
build-docs = "sphinx.cmd.build:main"
