[project]
name = "hgraph"
version = "0.5.8"
description = "A functional reactive platform used to process time-series streams. Provides support for backtest (simulation) and realtime time-series processing. Using a forward propagation graph with a microtask scheduler for the runtime engine."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Howard Henson", email = "howard@henson.me.uk"},
    {name = "Alexander Balabin", email = "balabin@me.com"},
    {name = "Simon Young", email = "whepstead@gmail.com"},
    {name = "Tope Olukemi", email = "tolukemi@gmail.com"}
]
keywords = [
    "reactive", "graph", "fpg", "forward propogating graph",
    "time series", "functional reactive programming",
    "frp", "functional", "time-series"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "frozendict>=2.3.10",
    "sortedcontainers>=2.4.0",
    "ordered-set>=4.1.0",
    "numpy>=1.23",
    "polars>=1.0",
    "sqlalchemy",
    "duckdb",
    "pyarrow>=16.1.0",
    "multimethod",
    "psutil",
    "typing-extensions",
    "pycurl",
    "black>=25.1.0",
    "pytz"
]

[project.urls]
Homepage = "https://github.com/hhenson/hgraph"
Documentation = "https://github.com/hhenson/hgraph/blob/main/docs/index.md"
Repository = "https://github.com/hhenson/hgraph.git"
Issues = "https://github.com/hhenson/hgraph/blob/main/ISSUES.md"
Changelog = "https://github.com/hhenson/hgraph/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["hgraph"]

[project.optional-dependencies]
web = [
    "perspective-python<4.0.0",
    "tornado",
    "requests",
    "pandas",
    "pycurl"
]
messaging = [
    "kafka-python>=2.1.5"
]
notebook = [
    "matplotlib"
]
docs = [
    "sphinx>=7.4",
    "sphinx_rtd_theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinxcontrib-plantuml>=0.30",
    "sphinxcontrib-bibtex",
    "pybtex-apa-style>=1.3",
    "setuptools"
]
test = [
    "pytest",
    "mypy",
    "pytest-cov",
    "coverage",
    "pytest-xdist",
    "black"
]
dev = [
    # This is needed for CLion / other dev env to find the nanobind libs.
    "nanobind>=2.9",
]

[build-system]
requires = [
    "scikit-build-core>=0.9",
    "nanobind>=2.9",
    "cmake>=3.25",
    "ninja",
    "setuptools>=65"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Install pure Python package from hgraph and place the compiled extension under hgraph/
wheel.packages = ["hgraph"]
cmake.verbose = true
cmake.source-dir = "."
# Use the invoking Python for nanobind discovery unless overridden in CI
cmake.define.Python_EXECUTABLE = "{sys.executable}"
# Enforce macOS deployment target and architecture to satisfy libc++ requirements for std::format
cmake.define.CMAKE_OSX_DEPLOYMENT_TARGET = "15.0"
cmake.define.CMAKE_OSX_ARCHITECTURES = "arm64"


# Configure pytest
[tool.pytest.ini_options]
minversion = "7.4.3"
# After 4 cores there are no measurable improvements I can measure at the moment.
# If you want the default runs to include these arguement uncomment
#addopts = "-n 4 -ra -q --dist=loadscope" # " --cov=hgraph --cov-report=term-missing --cov-report=xml"
adapots = "--doctest-modules"
# Ensure tests and IDE analysis can resolve the in-tree package
pythonpath = ["."]
testpaths = [
    "hgraph_unit_tests",
    "docs"
]
markers = [
    "serial: mark test to run serially (not in parallel with xdist)",
    "smoke: Smoke test marker used to perform a very basic checkout of built pips"
]

# Configure coverage
[tool.coverage.run]
source_pkgs = ["hgraph", ]
branch = true
parallel = true
omit = [
    "hgraph_unit_tests/*",
    "examples/*",
    "docs/*",
    "hgraph/notebook/*",
    "hgraph/debug/*"
]

[tool.coverage.paths]
hg = ["hgraph", ]
tests = ["hgraph_unit_tests"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py312']
unstable = true
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.mypy]
files = [".", ]

[project.scripts]
build-docs = "sphinx.cmd.build:main"
